--- a/src/global.css
+++ b/src/global.css
@@ -19,7 +19,8 @@ input, button, textarea{
   font: 400 15px Roboto, sans-serif;
 }
 
-input {
+
+input[type=email], input[type=password], input[type=text]{
   padding: 10px;
   border-radius: 8px;
   width: 100%;
