--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -12,6 +12,10 @@
 .auth-header {
   display: none;
 }
+.btn-forgot {
+  cursor: pointer;
+  color: #866118;
+}
 @media(max-width: 767px){
   .auth-sidebar-container h1 {
     font-size: 16px!important;
@@ -143,6 +147,20 @@
   margin-top: 10px;
   transition: all 0.5s;
   margin-bottom: 50px;
+  border: 0;
+}
+
+.button{
+  cursor: pointer;
+  background: #866118;
+  color: #f2d184;
+  padding: 10px 35px;
+  border-radius: 8px;
+  font-size: 17px;
+  margin-top: 10px;
+  transition: all 0.5s;
+  margin-bottom: 50px;
+  border: 0;
 }
 
 .auth-form button span {
