--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -158,8 +158,17 @@
   margin: 30px;
   padding: 50px;
   max-width: 400px;
-
 }
+
+.loading {
+  display: flex;
+  font-size: 25px;
+  font-weight: bold;
+  color: #866118;
+  margin-top: 20px;
+  padding: 20px;
+}
+
 
 
 .button{
@@ -209,4 +218,3 @@
   font-weight: bold;
 }
 /*end-container*/
-
